0.21
====

- Some compile errors reported because I made some changes that apply to Qt3.1.2 that are not compatible with Qt3.0*
  Back ported the String::remove to Qt3.0*
  
- I split the ./compile script into 2 scripts. ./compile creates the qtstalker binary, and ./compile_plugins creates all
  the plugins. This is to make the compile process more efficient and flexible.

0.20
====

- Added a "Color Bars" parm to draw color up and down bars for the VOL plugin. This only works if you use the
  histogram bars line style.
  
- Added a data panel located under the tab area that dynamically updates all the chart values where the mouse is currently located.

- Reports that 0.19 does not create a binary on some dist's "debian". 0.17 compiles fine. I think this is because
  I removed the -ldl linker option for FreeBSD. Some dist's need the linker option. Updated all the *.pro files to add
  the -ldl linker option if on a linux-g++ system.
  
- Added new chart type "Swing". This is the typical Gann swing chart type.

0.19
====

This is a rush release to address some nasty bugs.

- There was a nasty bug that segfaulted on new installs and when trying to delete the last tabbed indicator.
  In trying to fix this I found an annoying limitation with the QTabWidget. In order to fix this I had to make
  a tabbed indicator page always visible in order to propagate resize signals properly.

- Adjusted the initial chart position by one bar due to some plots being partially truncated.

- I was unhappy with the all the tab function buttons causing limitations to resizing. I removed the buttons
  and replaced them with a context menu instead. Just right click with the mouse to bring it up. Doh!

- Changed the tab directory widgets to behave more like the standard directory dialogs. Double clicks to
  enter and leave sub directories instead of single clicks. Singles were creating some problems.

0.18
====
